done adding button

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>My First Ever Website</h1>
     <p>I am a happy man</p>
     <p>I can feel you</p>
+    <input type="text">
+    <br>
+    <button>Click me</button>
 </body>
 </html>
